--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
     <link href="grid.css" rel="stylesheet">
   </head>
   <body class="py-4">
-    <div class="container">
+    <div class="container-lg">
 
-  <h1 style="color:gray; font-size: 25vw; font-family:BebasNeue;">RASHA RAHMAN</h1>
+  <h1 style="color:#ffb58c;font-weight: bold; font-size: 15vw; text-align: center; letter-spacing: -10px; font-family:BebasNeue;">RASHA RAHMAN</h1>
+<div class="container-lg">test </div>
   <p class="lead">Basic grid layouts to get you familiar with building within the Bootstrap grid system.</p>
   <p>In these examples the <code>.themed-grid-col</code> class is added to the columns to add some theming. This is not a class that is available in Bootstrap by default.</p>
 
