--- a/index.html
+++ b/index.html
@@ -40,8 +40,13 @@
   <body class="py-4">
     <div class="container-lg">
 
-  <h1 style="color:#ffb58c;font-weight: bold; font-size: 15vw; text-align: center; letter-spacing: -10px; font-family:BebasNeue;">RASHA RAHMAN</h1>
-<div class="container-lg">test </div>
+  <h1 style="color:#ffb58c;font-weight: bold; margin-top: 5vw; font-size: 15vw; text-align: center; letter-spacing: -0.5vw;line-height: 12vw;font-family:BebasNeue;">RASHA RAHMAN</h1>
+<div class="row mb-3">
+  <div class="col-md-6">
+  <h2 style="color:#ffb58c;font-weight: bold; font-size: 4.6vw; text-align: center; opacity: 68%; letter-spacing: 0.04vw; font-family:BebasNeue;">XXX - XXX - XXXX</h2> </div></div>
+    <h1 style="color:#FFFFFF;font-size: 3.55vw;line-height: 3vw; margin-left: 4vw; margin-right: 4vw; text-transform: uppercase; text-align: center; font-family:BebasNeue;">growth mindsetted individual ALWAYS looking for more
+challenges AND INFORMATION TO LEARN AND UTILIZE. I believe there is no perfect, cause that would mean no room TO </h2>
+<h2 style="color:WHITE; font-size: 6vw;font-weight: bold; text-align: center; margin-top: 0.01vw;font-family:BebasNeue;">-PROGRESS-</h2>
   <p class="lead">Basic grid layouts to get you familiar with building within the Bootstrap grid system.</p>
   <p>In these examples the <code>.themed-grid-col</code> class is added to the columns to add some theming. This is not a class that is available in Bootstrap by default.</p>
 
