--- a/index.html
+++ b/index.html
@@ -38,21 +38,35 @@
     <link href="grid.css" rel="stylesheet">
   </head>
   <body class="py-4">
-    <div class="container-lg">
+    <div class="container">
 
-  <h1 style="color:#ffb58c;font-weight: bold; margin-top: 5vw; font-size: 15vw; text-align: center; letter-spacing: -0.5vw;line-height: 12vw;font-family:BebasNeue;">RASHA RAHMAN</h1>
+
+<!--
 <div class="row mb-3">
-  <div class="col-md-6">
-  <h2 style="color:#ffb58c;font-weight: bold; font-size: 4.6vw; text-align: center; opacity: 68%; letter-spacing: 0.04vw; font-family:BebasNeue;">XXX - XXX - XXXX</h2> </div></div>
-    <h1 style="color:#FFFFFF;font-size: 3.55vw;line-height: 3vw; margin-left: 4vw; margin-right: 4vw; text-transform: uppercase; text-align: center; font-family:BebasNeue;">growth mindsetted individual ALWAYS looking for more
-challenges AND INFORMATION TO LEARN AND UTILIZE. I believe there is no perfect, cause that would mean no room TO </h2>
-<h2 style="color:WHITE; font-size: 6vw;font-weight: bold; text-align: center; margin-top: 0.01vw;font-family:BebasNeue;">-PROGRESS-</h2>
-  <p class="lead">Basic grid layouts to get you familiar with building within the Bootstrap grid system.</p>
-  <p>In these examples the <code>.themed-grid-col</code> class is added to the columns to add some theming. This is not a class that is available in Bootstrap by default.</p>
+        <div class="col-md-6 main-logo" >
+    <p style="text-align:right">RASHA</p>
+    </div>
+    <div class="col-md-6 main-logo" ><a>RAHMAN</a>
+</div>
+</div>
+-->
+<div class="container-lg main-logo">
+RASHA RAHMAN
+</div>
+<div class="row mb-3">
+    <div class="col-md-6 sub-logo" >
+    <p style="text-align:right">VIEW PROJECTS<p> </div>
+    <div class="col-md-6 sub-logo"   >
+    <p style="text-align:left">RASHA@RASHA.WORLD</p> </div>
+      <h1 style="color:rgb(140,214,255);font-size: 3.55vw;line-height: 3vw; margin-left: 4vw; margin-right: 4vw; margin-bottom: 0vw; text-transform: uppercase; text-align: center; font-family:BebasNeue;">growth mindsetted individual ALWAYS looking for more
+  challenges AND INFORMATION TO LEARN AND UTILIZE. I believe there is no perfect, cause that would mean no room TO </h2>
+  <div class="container noice-stuff top-part">
+    {{<a style="color:rgb(140,214,255)"> MOVE FORWARD </a>}}</div>
 
-  <h2 class="mt-4">Five grid tiers</h2>
-  <p>There are five tiers to the Bootstrap grid system, one for each range of devices we support. Each tier starts at a minimum viewport size and automatically applies to the larger devices unless overridden.</p>
-
+  <div class="container down-arrow"><svg width="40" height="32" viewBox="0 0 40 32">
+    <path d="m 0 0 l 20 32 l 20 -32 z"></path>
+</svg></div>
+</div>
   <div class="row mb-3">
     <div class="col-4 themed-grid-col">.col-4</div>
     <div class="col-4 themed-grid-col">.col-4</div>
