--- a/vid1.html
+++ b/vid1.html
@@ -50,7 +50,7 @@
 
 </div>
 <video id="myVideo" width="1280" height="720" controls>
-  <source src="zoom_0.mp4" type="video/mp4">
+  <source src="https://filebin.net/olccui3cztw9fz71/zoom_0.mp4?t=odp2yyco" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
 
