--- a/projects.html
+++ b/projects.html
@@ -111,7 +111,7 @@
 								  <div class="col">Click Here For Prototype</div>
 						  </div>
 						  <div class="row">
-							  <img src="images/spotify.random1.png" class="img-fluid" ></img>
+							  <img src="images/spotify.random1.png" class="img-fluid img-p" ></img>
 						  </div>
 						 </div>
 						 <h6 class="text-xs font-medium text-right">Why I Did This Project:</h6>
@@ -140,7 +140,7 @@
 								<div class="col">Looking for help!</div>
 						</div>			
 						<div class="row">
-							<img src="images/pMc.png" class="img-fluid" ></img>
+							<img src="images/pMc.png" class="img-fluid img-p" ></img>
 						</div>
 					   </div>
 					   <h6 class="text-xs font-medium text-right">Why I Did This Project:</h6>
